# firmware

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.cpp  main.rs
