[package]
name = "TinyGuard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = [ "esp32c3", "embassy", "embassy-time-timg0", "async", "embassy-executor-thread", "embassy-executor-interrupt"] }
esp-backtrace = { version = "0.11.1", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
esp-wifi  = { version = "0.5.1", features = ["esp32c3", "wifi", "wifi-default", "embassy-net", "async", "embedded-svc"] }

embedded-io = "0.6.1"

smoltcp = { version = "0.11.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4", "dns-max-server-count-4"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"]}

embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
embassy-net-driver = { version = "0.2.0" }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.0"

embedded-io-async = "0.6.1"

[profile.dev.package.esp-wifi]
opt-level = 3
